# nfs-dq-backend

./: .gitignore  BUSINESS_LOGIC_TESTS_README.md  FILES_CREATED.md  README.md  TEST_SUITE_SUMMARY.md  config.json  enrichment.py  explore.ipynb  initial.py  main.py  pyproject.toml  requirements.txt  run_business_logic_tests.py  test_enrichment_business_logic.py  test_inconsistency_analysis.py  test_requirements.txt
app/: anthropic.py  col_population.py  database.py  date_formats_across_cols.py  detect_inconsistent_cols.py  drive.py  inconsistency.py  load_data.py  models.py  save_to_db.py
app/anthropic/: __init__.py  column_matcher.py  data_quality_analyzer.py
app/enrichment/: __init__.py  database.py  enrichment_calculation_models.py  enrichment_calculator.py  models.py
app/initial/: global_date_formats.py  population.py  utils.py
deepnote/data_quality/: Analyze Data Quality.ipynb  Before & After.ipynb  Init.ipynb
test/: test_categorization_fix.py  test_enrichment_business_logic.py  test_inconsistency_analysis.py  test_null_detection.py  test_real_scenario.py
