[project]
name = "dq-backend"
version = "0.1.0"
description = "Backend for dq project"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydrive2>=1.21.3",
    "phonenumbers>=9.0.6",
    "sqlmodel>=0.0.24",
    "pandas>=2.3.0",
    "anthropic>=0.52.2",
    "pydantic>=2.11.5",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
ignore = ["F541"]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0"]
